[package]
name = "libfive-sys"
version = "0.2.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
readme = "README.md"
keywords = ["3d", "geometry", "graphics", "parametric", "procedural"]
categories = ["graphics", "mathematics", "multimedia", "rendering"]
license = "MPL-2.0"
description = "Tools for solid modeling, especially suited for parametric and procedural design."
documentation = "https://docs.rs/libfive-sys/"
repository = "https://github.com/virtualritz/libfive-rs/"
homepage = "https://libfive.com/"
exclude = [
    "libfive/bin/**/*",
    "libfive/doc/**/*",
    "libfive/studio/**/*",
    "libfive/libfive/bind/**/*",
    "libfive/libfive/test/**/*",
]

[features]
# "Tightly pack opcodes (breaks compatibility with older saved f-reps).
packed_opcodes = []

[build-dependencies]
cmake = "0.1.50"
bindgen = "0.69.4"
#vcpkg = "0.2.12"
