[package]
name = "libfive"
version = "0.2.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2021"
readme = "README.md"
keywords = ["3d", "geometry", "graphics", "parametric", "procedural"]
categories = ["graphics", "mathematics", "multimedia", "rendering"]
license = "MPL-2.0"
description = "Tools for solid modeling, especially suited for parametric and procedural design."
documentation = "https://docs.rs/libfive/"
repository = "https://github.com/virtualritz/libfive-rs/"
homepage = "https://libfive.com/"

[features]
default = ["ahash", "stdlib"]
# "Tightly pack opcodes (breaks compatibility with older saved f-reps).
packed_opcodes = ["libfive-sys/packed_opcodes"]
stdlib = []

[dependencies]
libfive-sys = { path = "../libfive-sys" }
ahash = { version = "0.8.7", optional = true }
